memcached and requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 Django==2.1
 django-filter==2.0.0
 djangorestframework==3.8.2
+dnspython==1.15.0
+psycopg2==2.7.5
+python3-memcached==1.51
 pytz==2018.5
