--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,28 @@
+blinker==1.4
+brotlipy==0.7.0
+certifi==2018.11.29
+cffi==1.11.5
+chardet==3.0.4
+Click==7.0
+decorator==4.3.0
 Django==2.1
 django-filter==2.0.0
 djangorestframework==3.8.2
 dnspython==1.15.0
+Flask==1.0.2
+gunicorn==19.9.0
+httpbin==0.7.0
+idna==2.8
+IMAPClient==2.1.0
+itsdangerous==1.1.0
+Jinja2==2.10
+MarkupSafe==1.1.0
 psycopg2==2.7.5
+pycparser==2.19
 python3-memcached==1.51
 pytz==2018.5
+raven==6.9.0
+requests==2.21.0
+six==1.12.0
+urllib3==1.24.1
+Werkzeug==0.14.1
