--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ certifi==2018.11.29
 cffi==1.11.5
 chardet==3.0.4
 Click==7.0
+cycler==0.10.0
 decorator==4.3.0
 Django==2.1
 django-filter==2.0.0
@@ -16,9 +17,17 @@ idna==2.8
 IMAPClient==2.1.0
 itsdangerous==1.1.0
 Jinja2==2.10
+jsonrpclib-pelix==0.3.2
+kiwisolver==1.0.1
 MarkupSafe==1.1.0
+matplotlib==3.0.2
+numpy==1.15.4
 psycopg2==2.7.5
+py4j==0.10.7
 pycparser==2.19
+pyparsing==2.3.0
+pyspark==2.4.0
+python-dateutil==2.7.5
 python3-memcached==1.51
 pytz==2018.5
 raven==6.9.0
